gccida/c1/gen_lowpart
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart/src/emit-rtl.c:1624:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_lowpart( machine_mode mode, rtx x) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart/src/emit-rtl.c:1637:19: error: use of undeclared identifier 'machine_mode'
v5 = force_reg( ( machine_mode)BYTE2( v3), x); 
                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart/src/obj/emit-rtl.o] Error 1
